* Distribute Data Tracks - require .bam and .bai files to be dragged together. (tdisera)
* Fix RegisterFiles batch job to correctly match analysis file names in analysis directory (tdisera)
* Order file names alphabetically for Experiment files. (tdisera)
* Name links 'Register Experiment' for external data sharing site. (tdisera)
* Prune all empty folders for guest user. (bspiglejr)

5.4.2.3 Deploy Notes
--------------------
* assign all labs to the default core facility (declare @idMicroArray int;select @idMicroArray = idCoreFacility from CoreFacility where facilityName='Microarray and Genomic Analysis';insert into CoreFacilityLab)


5.4.2.2 (apr 30, 2012)
----------------------
* Allow users with read permission on analysis to distribute data tracks, except for guest. (tdisera)
* Add core facility radio buttons on public user registration.  Hide button if only 1 active facility and default new users to it. (bspiglejr)
* Rename Price.unitPriceExternal to price.unitPriceExternalAcademic in preparation for new unitPriceExternalCommercial.  (bspiglejr)
* Add new Super Admin role.  This is like admin but allows editing/creation of core facilities and assigning users to core facilities.  (bspiglejr)
* Add core facility checkboxes in the user edit screen.  Super Admins have full access, but admins have view access.  (bspiglejr)
* New users added by admins are added to the admin's core facilities automatically. (bspiglejr)
* Admins only see users in core facilities the admin is associated with in the user edit screen.  (bspiglejr)
* Add ability to filter Property Dictionary entries by Core Facility.  (bspiglejr)
* Add Core Facility to dictionary editor.  (bspiglejr)
* Add IsActive flag to core facility.  (bspiglejr)
* Only Super Admin's can edit the core facility dictionary or the Property dictionary. (bspiglejr)
* Gather department name when user specifies a new lab in public registration. (bspiglejr)