@@ -11,7 +11,8 @@
 * Fix RegisterFiles batch job to correctly match analysis file names in analysis directory (tdisera)
 * Order file names alphabetically for Experiment files. (tdisera)
 * Name links 'Register Experiment' for external data sharing site. (tdisera)
-* Prune all empty folders for guest user. (bspiglejr)
+* Prune all data track empty folders for guest user. (bspiglejr)
+* Fix bug in RegisterFiles batch job that was setting baseFilePath to null.
 
 5.4.2.3 Deploy Notes
 --------------------
